--- a/apps/trivia/src/app/game/game.component.html
+++ b/apps/trivia/src/app/game/game.component.html
@@ -7,6 +7,7 @@
 		<form
 			[formGroup]="formGroup"
 			*ngIf="formGroup"
+			(ngSubmit)="saveScore()"
 		>
 			<mat-stepper
 				formArrayName="questions"
@@ -81,6 +82,12 @@
 								{{ score }}
 							</span>
 						</p>
+						<p>Do you want to save your score?</p>
+						<button
+							mat-raised-button
+							color="primary"
+							type="submit"
+						>Yes</button>
 					</div>
 				</mat-step>
 
