--- a/apps/trivia/src/app/user-registration-dialog/user-registration-dialog.component.html
+++ b/apps/trivia/src/app/user-registration-dialog/user-registration-dialog.component.html
@@ -34,7 +34,7 @@
 		</div>
 	</form>
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
 	<button
 		mat-button
 		mat-dialog-close
