--- a/apps/trivia/src/styles/_material.scss
+++ b/apps/trivia/src/styles/_material.scss
@@ -41,7 +41,9 @@ $my-dark-theme: mat.define-dark-theme(
 @include mat.progress-spinner-theme($my-light-theme);
 @include mat.radio-theme($my-light-theme);
 @include mat.sidenav-theme($my-light-theme);
+@include mat.snack-bar-theme($my-light-theme);
 @include mat.stepper-theme($my-light-theme);
+@include mat.table-theme($my-light-theme);
 @include mat.toolbar-theme($my-light-theme);
 
 .dark {
@@ -58,6 +60,8 @@ $my-dark-theme: mat.define-dark-theme(
 	@include mat.progress-spinner-color($my-dark-theme);
 	@include mat.radio-color($my-dark-theme);
 	@include mat.sidenav-color($my-dark-theme);
+	@include mat.snack-bar-color($my-dark-theme);
 	@include mat.stepper-color($my-dark-theme);
+	@include mat.table-color($my-dark-theme);
 	@include mat.toolbar-color($my-dark-theme);
 }
