--- a/apps/trivia/src/app/leaderboard/leaderboard.component.html
+++ b/apps/trivia/src/app/leaderboard/leaderboard.component.html
@@ -3,64 +3,67 @@
 </mat-toolbar>
 
 <section class="page">
-	<table
-		mat-table
-		[dataSource]="stats$"
-		class="mat-elevation-z8 w-full max-w-xl"
-	>
-		<!-- Position Column -->
-		<ng-container matColumnDef="position">
-			<th
-				mat-header-cell
-				*matHeaderCellDef
-			> Nr. </th>
-			<td
-				mat-cell
-				*matCellDef="let element; let i = index"
-			> {{i+1}} </td>
-		</ng-container>
+	<ng-container *ngIf="(stats$ | async)?.length === 0">
+		<p>No scores available, yet.</p>
+	</ng-container>
+	<ng-container *ngIf="(stats$ | async)?.length">
+		<table
+			mat-table
+			[dataSource]="stats$"
+			class="mat-elevation-z8 w-full max-w-xl"
+		>
+			<ng-container matColumnDef="position">
+				<th
+					mat-header-cell
+					*matHeaderCellDef
+				> Nr. </th>
+				<td
+					mat-cell
+					*matCellDef="let element; let i = index"
+				> {{i+1}} </td>
+			</ng-container>
 
-		<ng-container matColumnDef="userDisplayName">
-			<th
-				mat-header-cell
-				*matHeaderCellDef
-			> User </th>
-			<td
-				mat-cell
-				*matCellDef="let element"
-			> {{element.userDisplayName}} </td>
-		</ng-container>
+			<ng-container matColumnDef="userDisplayName">
+				<th
+					mat-header-cell
+					*matHeaderCellDef
+				> User </th>
+				<td
+					mat-cell
+					*matCellDef="let element"
+				> {{element.userDisplayName}} </td>
+			</ng-container>
 
-		<ng-container matColumnDef="score">
-			<th
-				mat-header-cell
-				*matHeaderCellDef
-			> Score </th>
-			<td
-				mat-cell
-				*matCellDef="let element"
-			> {{element.score}} </td>
-		</ng-container>
+			<ng-container matColumnDef="score">
+				<th
+					mat-header-cell
+					*matHeaderCellDef
+				> Score </th>
+				<td
+					mat-cell
+					*matCellDef="let element"
+				> {{element.score}} </td>
+			</ng-container>
 
-		<ng-container matColumnDef="createdAt">
-			<th
-				mat-header-cell
-				*matHeaderCellDef
-			> Date </th>
-			<td
-				mat-cell
-				*matCellDef="let element"
-			> {{element.createdAt.toDate() | date:'short'}} </td>
-		</ng-container>
+			<ng-container matColumnDef="createdAt">
+				<th
+					mat-header-cell
+					*matHeaderCellDef
+				> Date </th>
+				<td
+					mat-cell
+					*matCellDef="let element"
+				> {{element.createdAt.toDate() | date:'short'}} </td>
+			</ng-container>
 
-		<tr
-			mat-header-row
-			*matHeaderRowDef="displayedColumns"
-		></tr>
-		<tr
-			mat-row
-			*matRowDef="let row; columns: displayedColumns;"
-		></tr>
-	</table>
-
+			<tr
+				mat-header-row
+				*matHeaderRowDef="displayedColumns"
+			></tr>
+			<tr
+				mat-row
+				*matRowDef="let row; columns: displayedColumns;"
+			></tr>
+		</table>
+	</ng-container>
 </section>
